gitops/components/banking-si-gateway/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: api-gateway
